--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 html, body {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background: #1d1d1d no-repeat fixed center;
+    background: #afafaf no-repeat fixed center;
     background-size: cover;
     font-family: sans-serif;
 }
@@ -12,9 +14,33 @@ body {
 header {
     position: fixed;
     width: 100%;
-    height: 70px;
-    background-color: rgba(0, 0, 0, 0.200);
-    backdrop-filter: blur(25px);
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(2px);
+}
+
+.ui-btn {
+    margin: 0;
+    width: 48px;
+    height:32px;
+    border: 0;
+    outline: 0;
+    background: transparent;
+}
+.ui-btn:hover {
+    background: rgba(255,255,255,.1);
+}
+.ui-btn.close:hover {
+    background: #e81123;
+}
+.ui-btn svg path, 
+.ui-btn svg rect, 
+.ui-btn svg polygon {
+    fill: #fff;
+}
+.ui-btn svg {
+    width: 10px;
+    height: 10px;
 }
 
 .app {
@@ -32,37 +58,20 @@ header {
     border-radius: 100%;
 }
 
-.ui-titleicon {
-	flex-grow: 1;
-	max-width: 32px;
-	max-height: 32px;
+.div-one {
+    text-align: right;
+    font-family: 'Roboto', sans-serif;
 }
 
-.ui-titlecontrols {
-	max-width: 144px;
-	max-height: 32px;
-	flex-grow: 1;
+.div-two {
+    text-align: center;
+    margin-top: -25px;
+    color: #fff;
 }
-.ui-btn {
-	margin: 0;
-	width: 48px;
-	height:32px;
-	border: 0;
-	outline: 0;
-	background: transparent;
-}
-.ui-btn:hover {
-	background: rgba(255,255,255,.1);
-}
-.ui-btn.close:hover {
-	background: #e81123;
-}
-.ui-btn svg path, 
-.ui-btn svg rect, 
-.ui-btn svg polygon {
-	fill: #fff;
-}
-.ui-btn svg {
-  width: 10px;
-  height: 10px;
+
+.div-three {
+    text-align: left;
+    margin-top: -26px;
+    border-radius: 50%;
+    padding: 2px;
 }
