--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@ header {
     width: 100%;
     height: 50px;
     background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(64px);
 }
 
 .ui-btn {
@@ -73,5 +73,27 @@ header {
     text-align: left;
     margin-top: -26px;
     border-radius: 50%;
+    padding: 1px;
+}
+
+.container {
+    align-content: center;
+    margin: 2%;
+    width: 95%;
+    height: 80vh;
+    border: none;
+    border-radius: 10px;
+    backdrop-filter: blur(64px);
+}
+.text {
     padding: 2px;
+    text-align: center;
+}
+
+.drag {
+    width: 100%;
+    height: 10px;
+    position: fixed;
+    -webkit-app-region: drag;
+    backdrop-filter: blur(64px);
 }
