--- a/src/app.css
+++ b/src/app.css
@@ -3,12 +3,16 @@
 html, body {
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 body {
     background: #afafaf no-repeat fixed center;
     background-size: cover;
     font-family: sans-serif;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -84,16 +88,53 @@ header {
     border: none;
     border-radius: 10px;
     backdrop-filter: blur(64px);
-}
-.text {
-    padding: 2px;
-    text-align: center;
+    outline: none;
 }
 
-.drag {
-    width: 100%;
-    height: 10px;
-    position: fixed;
-    -webkit-app-region: drag;
-    backdrop-filter: blur(64px);
+form {
+    margin-top: 20px;
+}
+
+input {
+    border: none;
+    padding: 10px;
+    color: white;
+    background: transparent;
+    outline: none;
+    border-bottom: 2px solid white;
+}
+
+input:focus {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    border: none;
+    padding: 10px;
+    color: white;
+    background: transparent;
+    outline: none;
+    border-bottom: 2px solid rgb(0, 140, 255);
+}
+
+input[type="button"] {
+    border: none;
+    padding: 10px;
+    color: white;
+    background: transparent;
+    outline: none;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+input[type="button"]:hover {
+    border: none;
+    padding: 10px;
+    color: white;
+    background: transparent;
+    outline: none;
+    border: 2px solid white;
+    background-color: rgb(0, 150, 255);
+    cursor: pointer;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    border-radius: 5px;
 }
